--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,5 @@
- [functions."fetchGoldRate"]
+[functions]
+  directory = "netlify/functions"
+
+[functions."fetchGoldRate"]
   schedule = "0 8,20 * * *" # Runs at 8 AM and 8 PM UTC daily
